--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     background-color: rgb(45, 45, 46);
     height: 100vh;
     margin: 0 auto; 
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 h3 {
@@ -17,10 +17,10 @@ h3 {
 
 .container {
     flex-direction: column;
-    background-color: #f5e1e1;
-    width: 450px;
+    background-color: #f3f3f3;
+    width: 400px;
     height: 400px;
-    border-radius: 7px;
+    border-radius: 10px;
 }
 
 .table {
@@ -38,7 +38,7 @@ h3 {
 }
 
 #top_trigger_button {
-    width: 400px;
+    width: 350px;
     height: 30px;
     margin-top: 10px;
     border: dashed 1px #b6b7b8;
@@ -48,57 +48,67 @@ h3 {
     margin: 5px;
 }
 
-.first {
+.first_section {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(144, 144, 235);
-    width: 450px;
-    height: 50px;
+    flex-direction: column;
+    margin-left: 20px;
+    margin-top: 15px;
 }
 
-.second {
+.first_section_button {
     display: flex;
-    justify-content: center;
     align-items: center;
-    background-color: plum;
-    width: 450px;
-    height: 50px; 
-}
-
-.third {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: lightcoral;
-    width: 450px;
-    height: 50px; 
-}
-
-
-.project__list {
-    background-color: rgb(243, 241, 241);
-    width: 150px;
+    text-align: center;
+    justify-content: space-between;
+    width: 350px;
     height: 30px;
-    border-radius: 8px;
+    margin-bottom: 15px;
 }
 
-#task__text {
-    width: 200px;
-    height: 25px; 
-    border-radius: 8px;
-    /* border: 0.2px solid black;  */
+.first_section_button_text {
+    margin: 0;
+    text-align: left;
 }
 
-#task__text:hover, #task__text:active, #task__text:focus, #task__text:visited {
-    border-radius: 8px;
-    /* outline: 0; 
-    box-shadow: none; */
-}
-
-#button {
-    width: 40px;
-    height: 40px;
-    border-radius: 10px;
+.button_arrow {
+    top: calc(50% - 5px);
+    width: 6px;
+    height: 6px;
+    border-bottom: 1px solid #000;
+    border-right: 1px solid #000;
+    transform: rotate(45deg);
+    z-index: 10;
+    margin-right: 10px;
     margin-top: 10px;
+}
+
+.second_section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 400px;
+    margin-left: 15px;
+}
+
+.checkbox_container {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.second_section_checkbox {
+    margin: 7px;
+    width: 15px;
+    height: 15px;
+}
+
+.second_section_checkbox_text {
+    margin: 0;
+    font-size: 14px;
+}
+
+.third_section {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 20px;
 }
