--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ h3 {
     margin-top: 10px;
 }
 
-.first_section_button_list {
+.distribution_type_button_list {
     display: none;
     background-color: rgb(243, 241, 241);
     width: 349px;
@@ -90,21 +90,22 @@ h3 {
     border: 1px solid black;
 }
 
-.first_section_button_list > .first_section_button_text {
+.distribution_type_button_list > .distribution_type_button_text {
     margin: 7px;
     font-size: 14px ;
 }
 
-.first_text {
-
+.managers_distribution_button_list {
+    display: none;
+    background-color: rgb(243, 241, 241);
+    width: 349px;
+    height: 55px;
+    border: 1px solid black;
 }
 
-.second_text {
-    /* display: none; */
-}
-
-.third_text {
-    /* display: none; */
+.managers_distribution_button_list > .managers_distribution_button_text {
+    margin: 7px;
+    font-size: 14px ;
 }
 
 .second_section {
